# docs/api/swagger.yaml
@@ -1,4 +1,34 @@
 definitions:
+  server.NullableTime:
+    properties:
+      time:
+        type: string
+      valid:
+        type: boolean
+    type: object
+  server.RepresentationsWithNullableTime:
+    properties:
+      agent_id:
+        type: integer
+      created_at:
+        type: string
+      end_date:
+        $ref: '#/definitions/server.NullableTime'
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      signed_date:
+        $ref: '#/definitions/server.NullableTime'
+      start_date:
+        type: string
+      status:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
   server.createUserRequest:
     properties:
       dob:
@@ -46,6 +76,19 @@ definitions:
       user:
         $ref: '#/definitions/server.userResponse'
     type: object
+  server.requestAgentRepresentationRequest:
+    properties:
+      client_username:
+        type: string
+      end_date:
+        type: string
+      start_date:
+        type: string
+    required:
+    - client_username
+    - end_date
+    - start_date
+    type: object
   server.userMeResponse:
     properties:
       user:
@@ -79,7 +122,154 @@ definitions:
 info:
   contact: {}
 paths:
-  /example/helloworld:
+  /agent/accept-representation/{id}:
+    post:
+      consumes:
+      - application/json
+      description: Allows an agent to accept a representation request.
+      parameters:
+      - description: Representation ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Representation request accepted successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "404":
+          description: Representation not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Accept representation request
+      tags:
+      - agent
+  /agent/decline-representation/{id}:
+    post:
+      consumes:
+      - application/json
+      description: Allows an agent to decline a representation request.
+      parameters:
+      - description: Representation ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Representation request declined successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "404":
+          description: Representation not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Decline representation request
+      tags:
+      - agent
+  /agent/representations:
+    get:
+      consumes:
+      - application/json
+      description: Fetches all representations for the authenticated user, whether
+        they are an agent or a regular user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of representations
+          schema:
+            items:
+              $ref: '#/definitions/server.RepresentationsWithNullableTime'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: List representations
+      tags:
+      - representations
+  /agent/request-representation:
+    post:
+      consumes:
+      - application/json
+      description: Allows an agent to request representation for a user.
+      parameters:
+      - description: Request Representation Request
+        in: body
+        name: requestAgentRepresentationRequest
+        required: true
+        schema:
+          $ref: '#/definitions/server.requestAgentRepresentationRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Representation request submitted successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "404":
+          description: Client not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Request representation
+      tags:
+      - agent
+  /health:
+    get:
+      description: Returns the health status of the server
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Health Check
+      tags:
+      - health
+  /hello-world:
     get:
       consumes:
       - application/json
@@ -94,19 +284,6 @@ paths:
       summary: HelloWorld example
       tags:
       - example
-  /health:
-    get:
-      description: Returns the health status of the server
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-      summary: Health Check
-      tags:
-      - health
   /user/login:
     post:
       consumes:
@@ -159,6 +336,8 @@ paths:
           description: Unauthorized
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get authenticated user information
       tags:
       - user
